@@ -15,6 +15,24 @@ RTEMS_PROG_CC_FOR_TARGET([-ansi -fasm])
 RTEMS_CANONICALIZE_TOOLS
 RTEMS_PROG_CCAS
 
+RTEMS_BSPOPTS_SET([ON_SKYEYE],[*],[])
+RTEMS_BSPOPTS_HELP([ON_SKYEYE],
+[If defined, enable options which optimize executingon the Skyeye 
+ simulator.  Speed up the clock ticks while the idle task is running so
+ time spent in the idle task is minimized.  This significantly reduces
+ the wall time required to execute the RTEMS test suites.])
+
+RTEMS_BSPOPTS_SET([BSP_PRESS_KEY_FOR_RESET],[*],[0])
+RTEMS_BSPOPTS_HELP([BSP_PRESS_KEY_FOR_RESET],
+[If defined, print a message and wait until pressed before resetting
+ board when application exits.])
+
+RTEMS_BSPOPTS_SET([BSP_RESET_BOARD_AT_EXIT],[*],[1])
+RTEMS_BSPOPTS_HELP([BSP_RESET_BOARD_AT_EXIT],
+[If defined, reset the board when the application exits.])
+
+BSP_BOOTCARD_OPTIONS
+
 RTEMS_CHECK_NETWORKING 
 AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")
 
