@@ -1,5 +1,23 @@
 /* include/bspopts.h.in.  Generated from configure.ac by autoheader.  */
 
+/* If defined, then the BSP Framework will put a non-zero pattern into the
+   RTEMS Workspace and C program heap. This should assist in finding code that
+   assumes memory starts set to zero. */
+#undef BSP_DIRTY_MEMORY
+
+/* If defined, print a message and wait until pressed before resetting board
+   when application exits. */
+#undef BSP_PRESS_KEY_FOR_RESET
+
+/* If defined, reset the board when the application exits. */
+#undef BSP_RESET_BOARD_AT_EXIT
+
+/* If defined, enable options which optimize executingon the Skyeye simulator.
+   Speed up the clock ticks while the idle task is running so time spent in
+   the idle task is minimized. This significantly reduces the wall time
+   required to execute the RTEMS test suites. */
+#undef ON_SKYEYE
+
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
